--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <title>nie roblox sex</title>
 </head>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
 <body id="body">
 <div id="rzeczy">    
     <h1>Nazwa: </h1>
@@ -15,10 +16,10 @@
     <input type="text" id="Dni">
     <br><br>
     <button id="button1" onclick="dodawanie()">Dodaj</button>
-    <button id="button2" onclick="usuwanie()">Usuń</button>
+    <canvas id="myChart" width="width:100%;max-width:800px" ></canvas>
 </div>
 <div id="reszta"></div>
-
+    <script src="wykres.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
